objects/Account.object
<CustomObject>
    <fields>
        <fullName>Comp_Tastings__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used on the Winery Account page</description>
        <label>Comp Tastings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Request_Types__c</fullName>
        <label>Custom Request Types</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exclude_Weekends__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Weekends</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Food_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used on the Winery Account page</description>
        <label>Food Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Holidays__c</fullName>
        <label>Holidays</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Important_Things_to_Remember__c</fullName>
        <label>Important Things to Remember</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Inactive_Custom_Request_Types__c</fullName>
        <label>Inactive_Custom_Request_Types</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <externalId>true</externalId>
        <label>Dist. Key</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lodging_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used on the Winery Account page</description>
        <label>Lodging Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Winery_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Private_Tours__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used on the Winery account page to display if the winery provides tours of their facilities.</description>
        <inlineHelpText>Checkbox displays if the winery provides tours of their facilities.</inlineHelpText>
        <label>Tours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Dist. Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAP_Account__c</fullName>
        <externalId>true</externalId>
        <label>SAP Account #</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Supplier_Address_Book_Number__c</fullName>
        <label>Supplier Address Book Number</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Currency__c</fullName>
        <label>Supplier Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>NZD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier_Number__c</fullName>
        <description>Numeric Id used to identify a supplier.</description>
        <externalId>true</externalId>
        <label>Supplier Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Tasting_Room_Hours__c</fullName>
        <description>Used on the Winery Account page</description>
        <label>Tasting Room Hours</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tours_Tastings_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines whether or not the Tours &amp; Tastings App can create a T&amp;T Request for this winery. Checked allows requests, Unchecked does not allow requests; based on validation rule on the TTR.</description>
        <inlineHelpText>This field determines whether or not the Tours &amp; Tastings App can create a T&amp;T Request for this winery. Checked allows requests; Unchecked does not allow requests.</inlineHelpText>
        <label>Tours &amp; Tastings Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tours_and_Tastings_Approval_Queue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tours and Tastings Approval Queue</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Wineries</relationshipName>
        <type>Lookup</type>
    </fields>
    <recordTypes>
        <fullName>Distributor</fullName>
        <active>true</active>
        <description>Distributor of items that are sold by Terlato</description>
        <label>Distributor Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Retailer_Account</fullName>
        <active>true</active>
        <description>Retailer of items sold by Terlato</description>
        <label>Retailer Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Supplier</fullName>
        <active>true</active>
        <description>Supplier of items that are sold by Terlato</description>
        <label>Supplier Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Terlato_Internal</fullName>
        <active>true</active>
        <description>Account that represents internal Terlato (Corporate, Winery, etc...).</description>
        <label>Terlato Internal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Winery_Account</fullName>
        <active>true</active>
        <description>Used for Wineries</description>
        <label>Winery Account</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>TT_Billing_Address_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
ISNEW(),
OR(
ISBLANK( BillingCity),
ISBLANK( BillingState)
)
)</errorConditionFormula>
        <errorMessage>Billing City and State are required</errorMessage>
    </validationRules>
</CustomObject>